--- a/views/index.pug
+++ b/views/index.pug
@@ -4,13 +4,18 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     style.
       body{
-        background-color:Black;
+        width: 100px;
+        height: 100px;
+        -webkit-animation-name: backgroundTrans 5s infinite; /* Safari 4.0 - 8.0 */
+        animation: backgroundTrans 5s infinite;
       }
       p {
-      text-align: center;
-      font-size: 60px;
-      margin-top:0px;
-      color: red;
+        text-align: center;
+        font-size: 60px;
+        margin-top:0px;
+        color: red;
+        -webkit-animation-name: timerTrans 5s infinite; /* Safari 4.0 - 8.0 */
+        animation: timerTrans 5s infinite;
       }
       div.container4 p{
         margin: 0;
@@ -20,12 +25,20 @@ html
         margin-right: -50%;
         transform: translate(-50%, -50%)
       }
+      @keyframes backgroundTrans {
+        from {background-color: black;}
+        to {background-color: blue;}
+      }
+      @keyframes timerTrans {
+        from {color: red;}
+        to {color: black;}
+      }
   .container4
     body
       p#demo
       script.
         // Set the date we're counting down to
-        var countDownDate = new Date("April 6, 2018 23:59:59").getTime();
+        var countDownDate = new Date("April 6, 2018 15:10:00").getTime();
         // Update the count down every 1 second
         var x = setInterval(function() {
         // Get todays date and time
@@ -43,6 +56,6 @@ html
         // If the count down is over, write some text
         if (distance < 0) {
         clearInterval(x);
-        document.getElementById("demo").innerHTML = "EXPIRED";
+        document.getElementById("demo").innerHTML = "Mullen is gone! Congrats on making it through the rough year!";
         }
         }, 1000);
