got rid of moving animation

--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ html
         margin-top:0px;
         color: red;
         -webkit-animation-name: timerTrans 5s infinite; /* Safari 4.0 - 8.0 */
-        animation: timerTrans 5s infinite, move 10s infinite;
+        animation: timerTrans 5s infinite;
       }
       div.container4 p{
         margin: 0;
