--- a/views/index.pug
+++ b/views/index.pug
@@ -52,9 +52,9 @@ html
   script.
     // Set the date we're counting down to
     //first Period end
-    var countDownDate = new Date("March 23, 2018 9:19:00").getTime();
+    //var countDownDate = new Date("March 23, 2018 9:19:00").getTime();
     //third Period    
-    /* var countDownDate = new Date("March 23, 2018 13:32:00").getTime(); */
+    var countDownDate = new Date("March 23, 2018 13:32:00").getTime(); 
     var distance = countDownDate;
     // Update the count down every 1 second
     var x = setInterval(function() {
